Use Laurel factory methods with SourceRange and fix URI parsing